@@ -1,6 +1,7 @@
 2008-03-03  Richard Dale  <richard.j.dale@gmail.com>
 
 	* Added some more Qt 4.4 classes
+	* Added some marshallers for new Qt 4.4 QList types
 
 2008-02-25  Richard Dale  <richard.j.dale@gmail.com>
 
